--- a/popup.html
+++ b/popup.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <head>
     <style>
-        BODY {width: 520px; min-height: 250px;}
+        BODY {width: 480px; min-height: 320px;}
     </style>
     <script src="popup.js"></script>
 </head>
 <body>
-<button id="getText">Get text</button> <button id="copyText">Copy text</button> <button id="cacheClear">Clear cache</button><br>
-<textarea id="outputcheck" rows="4" cols="50">
+<button id="getText">Get text</button> <button id="copyText">Copy text</button> <button id="cacheClearText">Clear cache</button><br>
+<textarea id="outputcheck" rows="6" style="width:100%;">
     Will be displayed here.
 </textarea>
 <br>
-<button id="go-to-options">Go to options</button>
+<button id="getName">Get name</button> <button id="copyName">Copy text</button> <button id="cacheClearName">Clear cache</button><br>
+<textarea id="namecheck" rows="4" style="width:100%;">
+    Will be displayed here.
+</textarea>
+<br>
+<button id="getMisc">Get Misc.</button> <button id="copyMisc">Copy text</button> <button id="cacheClearMisc">Clear cache</button><br>
+<textarea id="otherscheck" rows="6" style="width:100%;">
+    Will be displayed here.
+</textarea>
+<br>
+<button id="update">Update</button> <button id="go-to-options">Option Page</button>
 </body>
 </html>
