Add download button

--- a/popup.html
+++ b/popup.html
@@ -16,17 +16,17 @@
     <script src="popup.js"></script>
 </head>
 <body>
-<button id="getText">Get text</button> <button id="copyText">Copy text</button> <button id="cacheClearText">Clear cache</button><br>
+<button id="getText">Get text</button> <button id="copyText">Copy text</button> <button id="downText">Download csvFile</button> <button id="cacheClearText">Clear cache</button><br>
 <textarea id="outputcheck" rows="6">
 Will be displayed here.
 </textarea>
 <br>
-<button id="getName">Get name</button> <button id="copyName">Copy text</button> <button id="cacheClearName">Clear cache</button><br>
+<button id="getName">Get name</button> <button id="copyName">Copy text</button> <button id="downName">Download csvFile</button>  <button id="cacheClearName">Clear cache</button><br>
 <textarea id="namecheck" rows="4">
 Will be displayed here.
 </textarea>
 <br>
-<button id="getMisc">Get Misc.</button> <button id="copyMisc">Copy text</button> <button id="cacheClearMisc">Clear cache</button><br>
+<button id="getMisc">Get Misc.</button> <button id="copyMisc">Copy text</button> <button id="downMisc">Download csvFile</button>  <button id="cacheClearMisc">Clear cache</button><br>
 <textarea id="otherscheck" rows="6">
 Will be displayed here.
 </textarea>
