add option for using online DB

--- a/options.html
+++ b/options.html
@@ -23,8 +23,11 @@
         <input type="checkbox" id="isVerbose">
         Set Verbose output(for development)
       </label>
+      <br>
+      DB path: <input type="text" id="origintext" value="https://sidewinderk.github.io/gbfTransKor" size="50"> <button id="useLocalDB" style="height: 20px;width:100px">Use Local DB</button><button id="useOnlineDB" style="height: 20px;width:100px">Use Online DB</button> <br>
+      local DB path can be used for the development mode.
       <div id="status"></div>
-      <button id="save">Save</button>
+      <button id="save" style="width:100px">Save</button>
     </body>
     <script src="options.js"></script>
   </html>
