add url link to the github

--- a/options.html
+++ b/options.html
@@ -28,6 +28,8 @@
       local DB path can be used for the development mode.
       <div id="status"></div>
       <button id="save" style="width:100px">Save</button>
+      <br><br>
+      Link to GitHub: <a href="https://github.com/sidewinderk/gbfTransKor">https://github.com/sidewinderk/gbfTransKor</a>
     </body>
     <script src="options.js"></script>
   </html>
