--- a/options.html
+++ b/options.html
@@ -11,6 +11,8 @@
       </style>
     </head>
     <body>
+      <b>Main functions</b>
+      <br>
       <label>
         <input type="checkbox" id="isExtractMode">
         Use Extraction mode
@@ -23,8 +25,21 @@
         <input type="checkbox" id="isVerbose">
         Set Verbose output(for development)
       </label>
+      <br><br>
+      <b>Configuration for translations</b>
       <br>
-      DB path: <input type="text" id="origintext" value="https://sidewinderk.github.io/gbfTransKor" size="50"> <button id="useLocalDB" style="height: 20px;width:100px">Use Local DB</button><button id="useOnlineDB" style="height: 20px;width:100px">Use Online DB</button> <br>
+      <label>
+        <input type="checkbox" id="doImageSwap">
+        Set Swapping Images
+      </label>
+      <label>
+        <input type="checkbox" id="doBattleTranslation">
+        Set Battle text trainslation
+      </label>
+      <br><br>
+      <b>Configuration for DB</b>
+      <br>
+      DB path: <input type="text" id="origintext" value="https://sidewinderk.github.io/gbfTransKor" size="50"> <button id="useLocalDB" style="height: 20px;width:100px">Use Local DB</button><button id="useOnlineDB" style="height: 20px;width:120px">Use Online DB</button> <br>
       local DB path can be used for the development mode.
       <div id="status"></div>
       <button id="save" style="width:100px">Save</button>
