--- a/popup.html
+++ b/popup.html
@@ -153,13 +153,13 @@
     </TABLE>
     <br>
     <div id='extractModeWindow' style="display:none">
-        <button id="getText">불러오기</button> <button id="copyText">Copy text</button> <button id="downText">Download csvFile</button> <button id="cacheClearText">Clear cache</button><br>
+        <span class="btntext">스토리 텍스트</span><br><button id="getText">가져오기</button> <button id="copyText">복사</button> <button id="downText">csv파일로 다운로드</button> <button id="cacheClearText">캐시 지우기</button><br>
         <textarea id="outputcheck" rows="6">여기에 텍스트가 표시됩니다.</textarea>
         <br>
-        <button id="getName">불러오기</button> <button id="copyName">Copy text</button> <button id="downName">Download csvFile</button> <button id="cacheClearName">Clear cache</button><br>
+        <span class="btntext">스토리 이름</span><br><button id="getName">가져오기</button> <button id="copyName">복사</button> <button id="downName">csv파일로 다운로드</button> <button id="cacheClearName">캐시 지우기</button><br>
         <textarea id="namecheck" rows="4">여기에 텍스트가 표시됩니다.</textarea>
         <br>
-        <button id="getMisc">불러오기</button> <button id="copyMisc">Copy text</button> <button id="downMisc">Download csvFile</button> <button id="cacheClearMisc">Clear cache</button><br>
+        <span class="btntext">전체 텍스트</span><br><button id="getMisc">가져오기</button> <button id="copyMisc">복사</button> <button id="downMisc">csv파일로 다운로드</button> <button id="cacheClearMisc">캐시 지우기</button><br>
         <textarea id="otherscheck" rows="6">여기에 텍스트가 표시됩니다.</textarea>
         <br> <button id="update">모든 캐시 지우기</button>
     </div>
