--- a/devtools.html
+++ b/devtools.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<script src="./devtools.js"></script>
+		<script src="./background.js" type="text/javascript"></script>
 	</head>
 	<body>
 		
