--- a/popup.html
+++ b/popup.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <style>
         BODY {width: 480px; min-height: 320px;}
@@ -32,5 +33,8 @@ Will be displayed here.
 </textarea>
 <br>
 <button id="update">Manual Refresh</button> <button id="go-to-options">Option Page</button>
+<br>
+<button id="getScenes">Get Scenes</button><button id="clearScenes">Clear Scenes</button>
+<textarea id="Scenes" rows="4"></textarea>
 </body>
 </html>
