모든 텍스트 추출&번역 기능 적용 완료

--- a/popup.html
+++ b/popup.html
@@ -34,7 +34,9 @@ Will be displayed here.
 <br>
 <button id="update">Manual Refresh</button> <button id="go-to-options">Option Page</button>
 <br>
-<button id="getScenes">Get Scenes</button><button id="clearScenes">Clear Scenes</button>
+<button id="getScenes">Get Scenes</button><button id="clearScenes">Clear Scenes</button><button id='downScenes'>
+	Download CSV
+	</button>
 <textarea id="Scenes" rows="4"></textarea>
 </body>
 </html>
