upstream과 머지한 후 발생한 버그들 수정.

--- a/popup.html
+++ b/popup.html
@@ -154,8 +154,8 @@
     </TABLE>
     <br>
     <div id='extractModeWindow' style="display:none">
-        <span class="btntext">스토리 텍스트</span><br><button id="getText">가져오기</button> <button id="copyText">복사</button> <button id="downText">csv파일로 다운로드</button> <button id="cacheClearText">캐시 지우기</button><br>
-        <textarea id="outputcheck" rows="6">여기에 텍스트가 표시됩니다.</textarea>
+        <span class="btntext">스토리 텍스트</span><br><button id="getScenes">가져오기</button> <button id="copyScenes">복사</button> <button id="downScenes">csv파일로 다운로드</button> <button id="clearScenes">캐시 지우기</button><br>
+        <textarea id="Scenes" rows="6">여기에 텍스트가 표시됩니다.</textarea>
         <br>
         <span class="btntext">스토리 이름</span><br><button id="getName">가져오기</button> <button id="copyName">복사</button> <button id="downName">csv파일로 다운로드</button> <button id="cacheClearName">캐시 지우기</button><br>
         <textarea id="namecheck" rows="4">여기에 텍스트가 표시됩니다.</textarea>
@@ -166,11 +166,6 @@
     </div>
     <br>
     <button class="myButton" id="go-to-options">상세 설정</button>
-
-<button id="getScenes">Get Scenes</button><button id="clearScenes">Clear Scenes</button><button id='downScenes'>
-	Download CSV
-	</button>
-<textarea id="Scenes" rows="4"></textarea>
 </body>
 
 </html>
