--- a/popup.html
+++ b/popup.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 
+<html>
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css">
@@ -153,8 +154,8 @@
     </TABLE>
     <br>
     <div id='extractModeWindow' style="display:none">
-        <span class="btntext">스토리 텍스트</span><br><button id="getText">가져오기</button> <button id="copyText">복사</button> <button id="downText">csv파일로 다운로드</button> <button id="cacheClearText">캐시 지우기</button><br>
-        <textarea id="outputcheck" rows="6">여기에 텍스트가 표시됩니다.</textarea>
+        <span class="btntext">스토리 텍스트</span><br><button id="getScenes">가져오기</button> <button id="copyScenes">복사</button> <button id="downScenes">csv파일로 다운로드</button> <button id="clearScenes">캐시 지우기</button><br>
+        <textarea id="Scenes" rows="6">여기에 텍스트가 표시됩니다.</textarea>
         <br>
         <span class="btntext">스토리 이름</span><br><button id="getName">가져오기</button> <button id="copyName">복사</button> <button id="downName">csv파일로 다운로드</button> <button id="cacheClearName">캐시 지우기</button><br>
         <textarea id="namecheck" rows="4">여기에 텍스트가 표시됩니다.</textarea>
@@ -165,7 +166,6 @@
     </div>
     <br>
     <button class="myButton" id="go-to-options">상세 설정</button>
-
 </body>
 
 </html>
