전투 텍스트 추출 기능 구현

--- a/popup.html
+++ b/popup.html
@@ -184,6 +184,10 @@
             다운로드</button> <button id="clearScenes">캐시 지우기</button><br>
         <textarea id="Scenes" rows="6">여기에 텍스트가 표시됩니다.</textarea>
         <br>
+        <span class="btntext">전투 텍스트</span><br><button id="getBattle">가져오기</button> <button id="copyBattle">복사</button>
+        <button id="downBattle">csv파일로 다운로드</button> <button id="clearBattle">캐시 지우기</button><br>
+        <textarea id="battleText" rows="4">여기에 텍스트가 표시됩니다.</textarea>
+        <br>
         <span class="btntext">스토리 이름</span><br><button id="getName">가져오기</button> <button id="copyName">복사</button>
         <button id="downName">csv파일로 다운로드</button> <button id="cacheClearName">캐시 지우기</button><br>
         <textarea id="namecheck" rows="4">여기에 텍스트가 표시됩니다.</textarea>
