Change default font to infinity sans

--- a/options.html
+++ b/options.html
@@ -148,10 +148,10 @@
     <button class="myButton" id="useLocalDB" style="height: 24px;width:140px">로컬 DB</button> <button class="myButton" id="useOnlineDB" style="height: 24px;width:140px">온라인 DB</button> <br> 로컬 데이터베이스는 초벌 번역 확인 및 개발 QA 과정에서 사용.
     <hr>
     <H2 style="font-family: 'NanumSquare';">한국어 폰트 설정</H2>
-    웹폰트 주소: <input type="text" id="fontaddr" value="url('//cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/NanumSquareB.woff') format('woff');" size="50" style="font-family: 'NanumSquare';">
-    <br><button class="myButton" id="nanumFont" style="height: 24px;width:140px">나눔스퀘어</button> <button class="myButton" id="youthFont" style="height: 24px;width:140px">청소년체</button> <button class="myButton" id="customFont" style="height: 24px;width:140px">유저폰트</button>
+    웹폰트 주소: <input type="text" id="fontaddr" value="src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/InfinitySans-RegularA1.woff') format('woff'); font-weight: normal; font-style: normal;" size="50" style="font-family: 'NanumSquare';">
+    <br><button class="myButton" id="additionalFont1" style="height: 24px;width:140px">인피니티산스</button> <button class="myButton" id="nanumFont" style="height: 24px;width:140px">나눔스퀘어</button> <button class="myButton" id="customFont" style="height: 24px;width:140px">유저폰트</button>
     <br>유저폰트 예시(NanumSquare의 경우):
-    <br>주소에는 url('//cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/NanumSquareB.woff') format('woff'); 를 입력하고 '유저폰트' 버튼 클릭
+    <br>주소에는 src: url('//cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/NanumSquareB.woff') format('woff'); font-style: normal; 를 입력하고 '유저폰트' 버튼 클릭
 
     <br><br> GitHub 링크: <a href="https://github.com/sidewinderk/gbfTransKor">https://github.com/sidewinderk/gbfTransKor</a>
     <br> 번역시트(온라인 DB) 링크: <a href="https://docs.google.com/spreadsheets/d/1LQiu94RhA5gRlcOja0oMrtRKfql14yCvJZlpa25xvi0/edit?usp=sharing">https://docs.google.com/spreadsheets/d/1LQiu94RhA5gRlcOja0oMrtRKfql14yCvJZlpa25xvi0/edit?usp=sharing</a>
